working on JavaFX on Windows, more runtime problems, needing exports